apps/base/mkdocs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs-service
  labels:
    app: mkdocs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: mkdocs
