apps/base/mkdocs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: docs-ingress
spec:
  rules:
    - host: docs.uclab8.net
      http:
        paths:
          - backend:
              service:
                name: docs
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - docs.uclab8.net
      secretName: docs-tls-production
